# pyunicodegame

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: animation_demo.py  bloom_demo.py  camera_demo.py  demo.py  emitter_demo.py  image_demo.py  lighting_demo.py  put_demo.py  sprite_demo.py  unifont_demo.py  wedge_demo.py
scripts/: bdf_to_ttf.py  generate_wedges.py  hex_to_bdf.py  merge_fonts.py
src/pyunicodegame/: __init__.py  _lighting.py  _sprites.py  _window.py
src/pyunicodegame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyunicodegame/core/: __init__.py  colors.py  fonts.py  glyph_cache.py  grid.py  renderer.py
src/pyunicodegame/effects/: __init__.py  animation.py  bloom.py  particles.py
src/pyunicodegame/fonts/: 10x20.bdf  5x8.bdf  6x13.bdf  9x18.bdf
src/pyunicodegame/layers/: __init__.py  layer.py  layer_stack.py
src/pyunicodegame/themes/: __init__.py  cogmind.py  theme.py
src/pyunicodegame/ui/: __init__.py  borders.py  panel.py  text.py
